--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <a class='text'>(Click on image to see detailed project)</a>
           <div class="diff_project">
             <div class="diff_project_item">
-            <a href="files/Engineering Case Competition.pdf"><img src="photos/plastic.JPG" alt="project_image"></a>
+            <a href="files/Engineering Case Competition.pdf"><img src="photos/plastic.jpg" alt="project_image"></a>
               <h3> Enzymatic Plastic Degradation</h3>
               <p>A 24 hour designathon that won 2nd place in the 2020 WISE Engineering Case Competition in a team of four</p>
             </div>
