--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
       <div class="mySlides2">
         <div class="numbertext">1 / 10</div>
-        <img src="photos/trip1.jpg" style="width:100%">
+        <img src="photos/trip1.JPG" style="width:100%">
       </div>
       <div class="mySlides2">
         <div class="numbertext">2 / 10</div>
@@ -193,7 +193,7 @@
       <!-- Thumbnail images -->
       <div class="row">
         <div class="column2">
-          <img class="demo cursor" src="photos/trip1.jpg" style="width:100%" onclick="currentSlide2(1)">
+          <img class="demo cursor" src="photos/trip1.JPG" style="width:100%" onclick="currentSlide2(1)">
         </div>
         <div class="column2">
           <img class="demo cursor" src="photos/trip2.jpg" style="width:100%" onclick="currentSlide2(2)">
