--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       </div>
       <div class="mySlides2">
         <div class="numbertext">5 / 10</div>
-        <img src="photos/trip11.jpg" style="width:100%">
+        <img src="photos/trip11.JPG" style="width:100%">
       </div>
       <div class="mySlides2">
         <div class="numbertext">6 / 10</div>
@@ -178,15 +178,15 @@
       </div>
       <div class="mySlides2">
         <div class="numbertext">8 / 10</div>
-        <img src="photos/trip10.jpg" style="width:100%">
+        <img src="photos/trip10.JPG" style="width:100%">
       </div>
       <div class="mySlides2">
         <div class="numbertext">9 / 10</div>
-        <img src="photos/trip8.jpg" style="width:100%">
+        <img src="photos/trip8.JPG" style="width:100%">
       </div>
       <div class="mySlides2">
         <div class="numbertext">10 / 10</div>
-        <img src="photos/trip9.jpg" style="width:100%">
+        <img src="photos/trip9.JPG" style="width:100%">
       </div>
       <a class="prev2" onclick="plusSlides2(-1)">&#10094;</a>
       <a class="next2" onclick="plusSlides2(1)">&#10095;</a>
@@ -205,7 +205,7 @@
           <img class="demo cursor" src="photos/trip4.jpg" style="width:100%" onclick="currentSlide2(4)">
         </div>
         <div class="column2">
-          <img class="demo cursor" src="photos/trip11.jpg" style="width:100%" onclick="currentSlide2(5)">
+          <img class="demo cursor" src="photos/trip11.JPG" style="width:100%" onclick="currentSlide2(5)">
         </div>
         <div class="column2">
           <img class="demo cursor" src="photos/trip6.jpg" style="width:100%" onclick="currentSlide2(6)">
@@ -214,13 +214,13 @@
           <img class="demo cursor" src="photos/trip7.jpg" style="width:100%" onclick="currentSlide2(7)">
         </div>
         <div class="column2">
-          <img class="demo cursor" src="photos/trip10.jpg" style="width:100%" onclick="currentSlide2(8)">
+          <img class="demo cursor" src="photos/trip10.JPG" style="width:100%" onclick="currentSlide2(8)">
         </div>
         <div class="column2">
-          <img class="demo cursor" src="photos/trip8.jpg" style="width:100%" onclick="currentSlide2(9)">
+          <img class="demo cursor" src="photos/trip8.JPG" style="width:100%" onclick="currentSlide2(9)">
         </div>
         <div class="column2">
-          <img class="demo cursor" src="photos/trip9.jpg" style="width:100%" onclick="currentSlide2(10)">
+          <img class="demo cursor" src="photos/trip9.JPG" style="width:100%" onclick="currentSlide2(10)">
         </div>
       </div>
     </div>
@@ -387,17 +387,17 @@
       <a class='text'>(Click on image to watch short films)</a>
       <div class="diff_films">
         <div class="diff_films_item">
-          <a href="https://youtu.be/RR6tVlG7LG0"><img src="photos/tea.JPG" alt="project_image"></a>
+          <a href="https://youtu.be/RR6tVlG7LG0"><img src="photos/tea.jpg" alt="project_image"></a>
           <h3> Late Night Tea </h3>
           <p>An Aronofsky styled short film.</p>
         </div>
         <div class="diff_films_item">
-          <a href="https://youtu.be/gpzIFCGHcnw"><img src="photos/relation.JPG" alt="project_image"></a>
+          <a href="https://youtu.be/gpzIFCGHcnw"><img src="photos/relation.jpg" alt="project_image"></a>
           <h3>A Relationship</h3>
           <p>When the roles switch.</p>
         </div>
         <div class="diff_films_item">
-            <a href="https://youtu.be/axdpfVswwAA"><img src="photos/box.JPG" alt="project_image"></a>
+            <a href="https://youtu.be/axdpfVswwAA"><img src="photos/box.jpg" alt="project_image"></a>
           <h3>The Box</h3>
           <p>Greed consumes.</p>
         </div>
@@ -409,17 +409,17 @@
       <a class='text'>(Click on image to listen to music)</a>
       <div class="diff_films">
         <div class="diff_films_item">
-          <a href="https://youtu.be/HE4zry0rXSQ"><img src="photos/no.JPG" alt="project_image"></a>
+          <a href="https://youtu.be/HE4zry0rXSQ"><img src="photos/no.jpg" alt="project_image"></a>
           <h3> 你还没有 (You haven't yet)</h3>
           <p>A song for a close friend of mine.</p>
         </div>
         <div class="diff_films_item">
-          <a href="https://youtu.be/np_UJ79pdeU"><img src="photos/cicada.JPG" alt="project_image"></a>
+          <a href="https://youtu.be/np_UJ79pdeU"><img src="photos/cicada.jpg" alt="project_image"></a>
           <h3>蝉鸣 (The sound of cicadas)</h3>
           <p> When summer comes but you are alone in an unfamilar place.</p>
         </div>
         <div class="diff_films_item">
-            <a href="https://youtu.be/ua3XLBduzB8"><img src="photos/piano.JPG" alt="project_image"></a>
+            <a href="https://youtu.be/ua3XLBduzB8"><img src="photos/piano.jpg" alt="project_image"></a>
           <h3>Impromptu in C minor: Lost in Thoughts</h3>
           <p>A piece composed for the Do Mi Si La Do Re Project. </p>
         </div>
