--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
               <p>A 24 hour designathon that won 2nd place in the 2020 WISE Engineering Case Competition in a team of four</p>
             </div>
             <div class="diff_project_item">
-              <a href="files/2020UnBDC_Project_Manuscript.pdf"><img src="photos/bdc.JPG" alt="project_image"></a>
+              <a href="files/2020UnBDC_Project_Manuscript.pdf"><img src="photos/bdc.jpg" alt="project_image"></a>
               <h3>Correlation Between Eating Disorder and Social Media Use</h3>
               <p> An attempt in big date that got Top 15 in 2020 Undergraduate Big Data Challenge in a team of four</p>
             </div>
             <div class="diff_project_item">
-              <a href="https://github.com/xasayi/Three-Body-Solver"><img src="photos/3body.JPG" alt="project_image"></a>
+              <a href="https://github.com/xasayi/Three-Body-Solver"><img src="photos/3body.jpg" alt="project_image"></a>
               <h3>Three Body Simulation</h3>
               <p>A 24 hour physics hackathon to learn more about 3 body motion at the 2020 McGill Physics Competition in a team of four</p>
             </div>
