--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <p>I'm a second year student @UofT studying Engineering Science.</p>
           <p>I'm curious in almosty everything and am always open for challenges.</p>
           <p>Currently, 1) I am doing research with Professor Amar Vutha in AMO physics.</p>
-          <p>2) I am designing a three wheeler car for Blue Sky Solar Racing.</p>
+          <p>2) I am designing a three wheeler car for <a href="files/Engineering Case Competition.pdf">Blue Sky Solar Racing.</a> </p>
           <p>3) I am overseeing marketing decisinos for the Ontario Engineering Competition 2022</p>
           <p>In my spare time, I take photos, produce films, and make music.</p>
           </div>
