--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <p id = 'line'>-----------------</p>
           <p>I'm a second year student @UofT studying Engineering Science.</p>
           <p>I'm curious in almosty everything and am always open for challenges.</p>
-          <p>Currently, 1) I am doing research with at <a href = "https://www8.physics.utoronto.ca/~vutha/">Vuthalabs</a> at the University of Toronto.</p>
+          <p>Currently, 1) I am doing research at <a href = "https://www8.physics.utoronto.ca/~vutha/">Vuthalabs</a> at the University of Toronto.</p>
           <p>2) I am designing a three wheeler car for <a href="http://blueskysolar.utoronto.ca">Blue Sky Solar Racing</a>.</p>
           <p>3) I am overseeing marketing decisinos for the <a href = "https://www.oec2022.ca">Ontario Engineering Competition 2022</a>.</p>
           <p>In my spare time, I take photos, produce films, and make music.</p>
