--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="diff_project_item">
               <a href="files/2020UnBDC_Project_Manuscript.pdf"><img src="photos/bdc.jpg" alt="project_image"></a>
               <h3>Correlation Between Eating Disorder and Social Media Use</h3>
-              <p> An attempt in big date that got Top 15 in 2020 Undergraduate Big Data Challenge in a team of four</p>
+              <p> An attempt in big date that got Top 15 in the 2020 Undergraduate Big Data Challenge in a team of four</p>
             </div>
             <div class="diff_project_item">
               <a href="https://github.com/xasayi/Three-Body-Solver"><img src="photos/3body.jpg" alt="project_image"></a>
