update website with projects

--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
           <div class="text">
           <h1 class='title'>About</h1>
           <p id = 'line'>-----------------</p>
-          <p>I'm a second year student @UofT studying Engineering Science.</p>
+          <p>I'm a third year student @UofT studying <a href="https://engsci.utoronto.ca/program/what-is-engsci/">Engineering Science</a>.</p>
+          <p>I'm majoring in Engineering Physics and minoring in Robotics Engineering. </p>
           <p>I'm curious in almosty everything and am always open for challenges.</p>
-          <p>Currently, 1) I am doing research at <a href = "https://www8.physics.utoronto.ca/~vutha/">Vuthalabs</a> at the University of Toronto.</p>
-          <p>2) I am designing a three wheeler car for <a href="http://blueskysolar.utoronto.ca">Blue Sky Solar Racing</a>.</p>
+          <p>Currently, 1) I am doing research at Prof. Liu's <a href = "https://sites.google.com/site/biomedmicrolab/home">Microfluidics and BioMEMS Lab at UofT</a>.</p>
+          <p>2) I am in the aerodynamics team for <a href="http://blueskysolar.utoronto.ca">Blue Sky Solar Racing</a>.</p>
           <p>3) I am overseeing marketing decisions for the <a href = "https://www.oec2022.ca">Ontario Engineering Competition 2022</a>.</p>
           <p>In my spare time, I take photos, produce films, and make music.</p>
           </div>
@@ -53,19 +54,21 @@
           <div class="diff_project">
             <div class="diff_project_item">
             <a href="files/Engineering Case Competition.pdf"><img src="photos/plastic.jpg" alt="project_image"></a>
-              <h3> Enzymatic Plastic Degradation</h3>
-              <p>A 24 hour designathon that won 2nd place in the 2020 WISE Engineering Case Competition in a team of four</p>
+              <h3> Enzymatic Plastic Degradation </h3>
+              <p> A 24 hour designathon that won 2nd place in the 2020 WISE Engineering Case Competition in a team of four </p>
             </div>
             <div class="diff_project_item">
-              <a href="files/2020UnBDC_Project_Manuscript.pdf"><img src="photos/bdc.jpg" alt="project_image"></a>
-              <h3>Correlation Between Eating Disorder and Social Media Use</h3>
-              <p> An attempt in big date that got Top 15 in the 2020 Undergraduate Big Data Challenge in a team of four</p>
+              <a href="https://github.com/qed11/Lingling-Bot"><img src="photos/linglingbot.png" alt="project_image"></a>
+              <h3> Lingling Bot </h3>
+              <p> An ML model for multi-classical instrument identification from audio files with an accuracy of >80% in a team of four </p>
             </div>
             <div class="diff_project_item">
-              <a href="https://github.com/xasayi/Three-Body-Solver"><img src="photos/3body.jpg" alt="project_image"></a>
-              <h3>Three Body Simulation</h3>
-              <p>A 24 hour physics hackathon to learn more about 3 body motion at the 2020 McGill Physics Competition in a team of four</p>
+              <a href="files/UnBDC2021.pdf"><img src="photos/unbdc2021.png" alt="project_image"></a>
+              <h3> Are You Spreading COVID Misinformation?</h3>
+              <a href="https://youtu.be/63ewLytKp10"> video link </a>
+              <p> Top 15 in the 2021 Undergraduate Big Data Challenge in a team of four </p>
             </div>
+
           </div>
         </div>
 
