--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
           <p>I'm a third year student @UofT studying <a href="https://engsci.utoronto.ca/program/what-is-engsci/">Engineering Science</a>.</p>
           <p>I'm majoring in Engineering Physics and minoring in Robotics Engineering. </p>
           <p>I'm curious in almosty everything and am always open for challenges.</p>
-          <p>Currently, 1) I am doing research at Prof. Liu's <a href = "https://sites.google.com/site/biomedmicrolab/home">Microfluidics and BioMEMS Lab at UofT</a>.</p>
-          <p>2) I am in the aerodynamics team for <a href="http://blueskysolar.utoronto.ca">Blue Sky Solar Racing</a>.</p>
+          <p>Currently, 1) I am in the aerodynamics team for <a href="http://blueskysolar.utoronto.ca">Blue Sky Solar Racing</a>.</p>
+          <p>2) I am organizing and running workshopd for <a href="https://sites.google.com/view/uoft-ethics-in-ai-club/home?authuser=0">Ethical Principles in AI Team</a>.</p>
           <p>3) I am overseeing marketing decisions for the <a href = "https://www.oec2022.ca">Ontario Engineering Competition 2022</a>.</p>
+          <p>4) I am managing the UofT Engineer Iron Dragons Dragon Boat Club.</p>
           <p>In my spare time, I take photos, produce films, and make music.</p>
           </div>
           <img src="photos/me4.jpg" alt="">
@@ -124,10 +125,9 @@
       <div class="res3">
         <img src="photos/progress.png" alt="research_image">
         <p>The current COVID-19 pandemic has highlighted the urgent need for rapid high-sensitivity diagnostic testing for large-scale
-          population screening. For summer 2021, I will be working with Prof. Liu’s microfluidics and BioMEMS lab at the University of
-          Toronto to manufacture and test such lateral flow test strips. I will be developing the manufacturing facility for lab fabrication
-          of flow test strips and manufacturing as well as calibrating the lateral flow test strips for detection of N proteins in SARS-CoV-2
-          in spiked saliva samples.</p>
+          population screening. For the summer of 2021, I worked at Prof. Liu’s microfluidics and BioMEMS lab at the University of
+          Toronto to manufacture and test such lateral flow test strips. I iterated through the process of designing and manufacturing
+          lateral flow strips and was able to acheive a detection limit of 10ng/ml for N proteins in in SARS-CoV-2 in spiked blood samples.</p>
       </div>
     </div>
 
