--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset='UTF-8'>
     <meta name='viewpoint' content = 'width=device-width, initial-scale=1.0'/>
     <title>Sarina Xi</title>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Josefin+Sans" />
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
