--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <p>Currently, 1) I am in the aerodynamics team for <a href="http://blueskysolar.utoronto.ca">Blue Sky Solar Racing</a>.</p>
           <p>2) I am organizing and running workshopd for <a href="https://sites.google.com/view/uoft-ethics-in-ai-club/home?authuser=0">Ethical Principles in AI Team</a>.</p>
           <p>3) I am overseeing marketing decisions for the <a href = "https://www.oec2022.ca">Ontario Engineering Competition 2022</a>.</p>
-          <p>4) I am managing the UofT Engineer Iron Dragons Dragon Boat Club.</p>
+          <p>4) I am managing the UofT Engineering Iron Dragons Dragon Boat Club.</p>
           <p>In my spare time, I take photos, produce films, and make music.</p>
           </div>
           <img src="photos/me4.jpg" alt="">
