--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <!-- research 3 -->
       <div id="research3">
       <div class="res3">
-        <img src="photos/progress.png" alt="research_image">
+        <img src="photos/new half.jpg" alt="research_image">
         <p>The current COVID-19 pandemic has highlighted the urgent need for rapid high-sensitivity diagnostic testing for large-scale
           population screening. For the summer of 2021, I worked at Prof. Liu’s microfluidics and BioMEMS lab at the University of
           Toronto to manufacture and test such lateral flow test strips. I iterated through the process of designing and manufacturing
