--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
           <h1 class='title'>About</h1>
           <p id = 'line'>-----------------</p>
           <p>I'm a third year student @UofT studying <a href="https://engsci.utoronto.ca/program/what-is-engsci/">Engineering Science</a>.</p>
-          <p>I'm majoring in Engineering Physics and minoring in Robotics Engineering. </p>
+          <p>I'm majoring in Engineering Physics and minoring in AI + Robotics. </p>
           <p>I'm curious in almosty everything and am always open for challenges.</p>
-          <p>Currently, 1) I am in the aerodynamics team for <a href="http://blueskysolar.utoronto.ca">Blue Sky Solar Racing</a>.</p>
-          <p>2) I am organizing and running workshopd for <a href="https://sites.google.com/view/uoft-ethics-in-ai-club/home?authuser=0">Ethical Principles in AI Team</a>.</p>
-          <p>3) I am overseeing marketing decisions for the <a href = "https://www.oec2022.ca">Ontario Engineering Competition 2022</a>.</p>
-          <p>4) I am managing the UofT Engineering Iron Dragons Dragon Boat Club.</p>
+          <p>Currently, 1) I am working as an AI Engineer at RBC Capital Markets. 
+          <p>2) I am in the aerodynamics team for <a href="http://blueskysolar.utoronto.ca">Blue Sky Solar Racing</a>.</p>
+          <p>3) I am organizing and running workshops for <a href="https://sites.google.com/view/uoft-ethics-in-ai-club/home?authuser=0">Ethical Principles in AI Team</a>.</p>
+          <p>4) I am managing the UofT Engineering <a href = "https://dragonboat.skule.ca/home/">Iron Dragons Dragon Boat Club</a>.</p>
           <p>In my spare time, I take photos, produce films, and make music.</p>
           </div>
           <img src="photos/me4.jpg" alt="">
