--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <p>I'm curious in almosty everything and am always open for challenges.</p>
           <p>Currently, 1) I am working as an AI Engineer at RBC Capital Markets. 
           <p>2) I am in the aerodynamics team for <a href="http://blueskysolar.utoronto.ca">Blue Sky Solar Racing</a>.</p>
-          <p>3) I am organizing and running workshops for <a href="https://sites.google.com/view/uoft-ethics-in-ai-club/home?authuser=0">Ethical Principles in AI Team</a>.</p>
+          <p>3) I am organizing and running workshops for <a href="https://ethical-principles-in-ai.github.io/">Ethical Principles in AI Team</a>.</p>
           <p>4) I am managing the UofT Engineering <a href = "https://dragonboat.skule.ca/home/">Iron Dragons Dragon Boat Club</a>.</p>
           <p>In my spare time, I take photos, produce films, and make music.</p>
           </div>
