--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="#photo">Photography</a></li>
             <li><a href="#films">Film</a></li>
             <li><a href="#music">Music</a></li>
+            <li><a href="https://github.com/xasayi">GitHub</a></li>
           </ul>
         </div>
       </div>
