--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="navbar_items">
           <ul>
             <li><a href=#>  </a></li>
-            <li><a href=home.html>About</a></li>
+            <li><a href=index.html>About</a></li>
             <li><a href=research.html>Research</a></li>
             <li><a href=other.html>Other</a></li>
             <li><a href=#>  </a></li>
