--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="experience">
           <h2> EXPERIENCE </h2>
           <ul>
-          <li>2024 summer: R&D Engineer at <a href="https://trustelab.ca/">TRUSTE</a>.</li>
+          <!--<li>2024 summer: R&D Engineer at <a href="https://trustelab.ca/">TRUSTE</a>.</li>-->
           <li>2023 -- 2024: 2D Object Detection Member at <a href="https://www.autodrive.utoronto.ca">aUToronto</a>.</li>
           <li>2022 -- 2023: AI Engineer working on <a href="https://www.rbccm.com/en/expertise/electronic-trading/ai-trading.page?utm_source=rbc&utm_medium=va&utm_campaign=aiden">Aiden</a> at RBC Capital Markets.</li>
           <li>2021 -- 2023: VP Operations/Learning at <a href="https://sites.google.com/view/uofttmi">TMI</a>.</li>
