--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <h1 class='title'>Yang (Sarina) Xi</h1>
           <p>Hi! I'm currently a 4th year <a href="https://engsci.utoronto.ca/program/what-is-engsci/">Engineering Science</a>
             student at the University of Toronto, supervised by <a href="https://security.csl.toronto.edu">Prof. David Lie</a> working
-            on data privacy preservation in MLaaS. My interests are in Security and Privacy, AI, and Robotics. Furthermore,
+            on data privacy preservation in MLaaS. My interests are in security, privacy, and robustness in ML. Furthermore,
             I am an incoming MSML student at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>.<p>
           </div>
 
