--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
           </div>
           <div class="text">
           <h1 class='title'>Yang (Sarina) Xi</h1>
-          <p>Hi! I am an incoming MSML student at <a href="https://www.cmu.edu/">Carnegie Mellon University
+          <p>Hi! I am an incoming MSML student at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>.
             I did my undergrad at the University of Toronto in  <a href="https://engsci.utoronto.ca/program/what-is-engsci/">Engineering Science</a>
-            My undergraduate thesis was supervised by <a href="https://security.csl.toronto.edu">Prof. David Lie</a>, and I worked
-            on data privacy preservation in MLaaS. My interests are in security, privacy, and robustness in ML.
-            </a><p>
+            My undergraduate thesis was supervised by <a href="https://security.csl.toronto.edu">Prof. David Lie</a>, on the topic of
+            data privacy preservation against cloud adversaries in the NLP domain. My interests are in security, privacy, and robustness in ML.
+            <p>
           </div>
 
         </div>
