--- a/research.html
+++ b/research.html
@@ -56,7 +56,7 @@
   <div class="res1">
   <img class="framework" src="images/privacy.png" alt="project_image">
   <h3 class="projectname">Privacy Preserving Inference via Model Extraction Against Third-Party NLP Cloud Adversaries 
-    <br><font size="-1">(2024, Supervised by Prof. David Lie) <a href="files/Thesis_Final_Report.pdf">Bacholar's thesis pdf</font></a></h3>
+    <br><font size="-1">(2024, Supervised by Prof. David Lie) <a href="files/Thesis_Final_Report.pdf">Bachelor's thesis pdf</font></a></h3>
   <p>The widespread use of MLaaS cloud applications is accompanied by increasing data privacy risks, 
       where third-party cloud adversaries can potentially exploit and abuse sensitive user data. However, 
       many data privacy schemes sacrifice model data utility and performance efficiency in exchange for privacy. 
