--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             working on how to optimize assignments in a review evaluation system with <a href="https://www.cs.cmu.edu/~nihars/">Prof. Nihar Shah</a>.
             I did my undergrad at the University of Toronto in  <a href="https://engsci.utoronto.ca/program/what-is-engsci/">Engineering Science</a>.
             My undergraduate thesis was supervised by <a href="https://security.csl.toronto.edu">Prof. David Lie</a>, on the topic of
-            data privacy preservation against cloud adversaries in the NLP domain. My interests are in privacy, robustness, and ethics in ML.
+            data privacy preservation against cloud adversaries in the NLP domain. 
             <p>
           </div>
 
