--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         </div>
 
         <div class="skills">
-          <p><b>Programming Languages</b>: Python, MATLAB, ROS, C</p>
-          <p><b>Tools & Technologies</b>: PyTorch, TensorFlow, HuggingFace, LaTeX, Git, CAD, Ansys, Pointwise</p>
-          <p><b>Knowledge Base</b>: Machine Learning, Reinforcement Learning, Natural Language Processing, AI Privacy and Security, Robot Modeling and Control, Control Theory, Mobile Robotics</p>
+          <p><b>Programming Languages</b>:  (Proficient) Python, MATLAB, (Prior Experience) Java, C, HTML/CSS, SQL, ROS</p>
+          <p><b>Tools & Libraries</b>: Git, Pandas, Numpy, Scipy, Matplotlib, Seaborn, Pytorch, HuggingFace, Jupyter, LaTeX, CAD, Ansys, Pointwise</p>
+          <p><b>Knowledge Base</b>: Machine Learning, Reinforcement Learning, Natural Language Processing, AI Privacy and Security, Robot Modeling and Control</p>
           <!--<p><b>Certificates</b>: 
           <a href="https://www.coursera.org/account/accomplishments/specialization/JT97R7J2LJ4J?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=s12n">Coursera NLP Specialization</a>,
           <a href="https://www.coursera.org/account/accomplishments/specialization/JXA9VFWUMDSM?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=s12n">Coursera GANs Specialization</a>,
