--- a/research.html
+++ b/research.html
@@ -32,10 +32,11 @@
 <div class="research" id='research'>
   <h1 class='title'>Papers</h1>
     <ul>
-    <li class="researchname"><a href=https://arxiv.org/pdf/2405.16361>
-      LDPKiT: Recovering Utility in LDP Schemes by Training with Noise^2</a><br>
-      Kexin Li, <b>Yang Xi</b>, Aastha Mehta, David Lie<br>
-      <l>2024 </l></li>
+    <li class="researchname">
+      
+      Li, Kexin, <b>Yang Xi</b>, Aastha Mehta, and David Lie. 
+      <a href=https://arxiv.org/pdf/2405.16361></a>LDPKiT: Recovering Utility in LDP Schemes by Training with Noise^ 2.</a>
+      <l></l>arXiv preprint arXiv:2405.16361 (2024)</l></li>
     </ul>
 
 <h1 class='title'>Projects</h1>
