--- a/research.html
+++ b/research.html
@@ -32,7 +32,7 @@
 <div class="research" id='research'>
   <h1 class='title'>Papers</h1>
     <ul>
-    <li class="researchname">Li, Kexin, Yang Xi, Aastha Mehta, and David Lie.
+    <li class="researchname">
       <a href=https://arxiv.org/pdf/2405.16361>
       LDPKiT: Recovering Utility in LDP Schemes by Training with Noise^2</a><br>
       Kexin Li, <b>Yang Xi</b>, Aastha Mehta, David Lie<br>
