--- a/research.html
+++ b/research.html
@@ -19,7 +19,7 @@
             <li><a href=#>  </a></li>
             <li><a href=index.html>About</a></li>
             <li><a href=research.html>Research</a></li>
-            <li><a href=other.html>Other</a></li>
+            <li><a href=portfolio.html>Portfolio</a></li>
             <li><a href=#>  </a></li>
 
           </ul>
@@ -139,7 +139,7 @@
 
 <div class="footer">
   <hr color=#d3d3d3 size="1">
-  <p>@2024SarinaXi</p>
+  <p>@2025SarinaXi</p>
 </div>
 </div>
 </body>
