--- a/portfolio.html
+++ b/portfolio.html
@@ -134,7 +134,7 @@
               In July 2024, my family visited Iceland. The summer sun barely set, bathing the landscape in a seemingly endless light. 
               As we drove along the ring road, glaciers, black sand beaches, waterfalls, and scattered sheep and horses became part of the routine. 
               The high gas prices were a constant reminder of how remote everything felt, adding to the surreal feeling that we stepped into another world.
-              Along the way, we were saw patches of vibrant purple lupine, blooming for just a few weeks each summer.
+              Along the way, we were lucky enough to see patches of vibrant purple lupine, blooming for just a few weeks each summer.
             </h2></div>
           <img src="iceland/1.JPG">
           <img src="iceland/2.JPG">
@@ -154,7 +154,7 @@
             <h2>
               In late May 2024, I traveled to Kenting (墾丁) with friends. As the southernmost point of Taiwan, 
               it delivered the heat and humidity one would expect. The tourist season was not yet in full swing, 
-              allowing us to wander the beaches and night market free from the usual bustle. Through my lens, it 
+              allowing us to wander the beaches and night market free from the usual bustle. However, through my lens, it 
               was the people who became the main focus, with their stories unfolding quietly in the background.
             </h2></div>
             <img src="kenting/1.JPG">
@@ -172,9 +172,9 @@
 
         <div class="album" id="album6">
           <div><h2> In December 2019, after finishing my first semester of undergraduate studies, 
-            my family flew to Phoenix and embarked on a road trip. Over the next week, we made 
+            my family flew to Phoenix and went on a road trip. Over the next week, we made 
             our way through Arizona, Utah, and Nevada, ending our journey in LA. These photos capture 
-            the sights along the way — crowded rocks, lonely plants, and the raw beauty of the landscapes we passed through.
+            the sights along the way — crowded rocks, lonely plants, and the rawness of the landscapes we passed through.
           </h2></div>
             <img src="Arizona/1.JPG">
             <img src="Arizona/2.JPG">
