--- a/portfolio.html
+++ b/portfolio.html
@@ -280,7 +280,7 @@
   </div>
 
   <div class="film">
-    <h2 class='title'>Original short Films. Note: these are from my moody teen days, viewer discretion is advised.</h2>
+    <h2 class='title'>Original Short Films. Note: these are from my moody teen days, viewer discretion is advised.</h2>
     
     <div class="films">
     <div class="video">
