--- a/portfolio.html
+++ b/portfolio.html
@@ -242,7 +242,7 @@
   </div>
 
   <div class="music">
-    <h2 class='title'>Original music produced produced individually and with Sunshower.</h2>
+    <h2 class='title'>Original music produced individually and with Sunshower.</h2>
     
     <div class="pieces">
     <div class="piece">
