--- a/research.html
+++ b/research.html
@@ -33,7 +33,7 @@
   <h1 class='title'>Papers</h1>
     <ul>
     <li class="researchname">
-      <a href=https://arxiv.org/pdf/2405.16361>
+      <a href=https://arxiv.org/pdf/2405.16361v1>
       LDPKiT: Recovering Utility in LDP Schemes by Training with Noise^2</a><br>
       Kexin Li, <b>Yang Xi</b>, Aastha Mehta, David Lie<br>
       <l>arXiv preprint arXiv:2405.16361 (2024) </l></li>
