--- a/portfolio.html
+++ b/portfolio.html
@@ -293,8 +293,8 @@
       <a href="https://youtu.be/axdpfVswwAA?feature=shared"><img src="images/box.jpeg" alt="project_image"></a>
     </div>
     <div class="video">
-      <a href="https://youtu.be/JJVYLc6oikU?feature=shared"><h3>A Relationship</h3></a>
-      <a href="https://youtu.be/JJVYLc6oikU?feature=shared"><img src="images/relation.jpeg" alt="project_image"></a>
+      <a href="https://youtu.be/gpzIFCGHcnw?feature=shared"><h3>A Relationship</h3></a>
+      <a href="https://youtu.be/gpzIFCGHcnw?feature=shared"><img src="images/relation.jpeg" alt="project_image"></a>
        
     </div>
 
