--- a/water_sports.html
+++ b/water_sports.html
@@ -75,11 +75,11 @@
         <h2>Team photo at the 2024 Toronto Island International Dragon Boat Festival.</h2>
       </div>
        <div class="masonry-item">
-        <img src="sports/oc.jpg" alt="Canadian Nationals">
+        <img src="sports/oc.jpg" alt="">
         <h2>Outrigger canoeing in Toronto, 2023.</h2>
       </div>
       <div class="masonry-item">
-        <img src="sports/dw.jpg" alt="Dragon Warriors">
+        <img src="sports/dw.JPG" alt="">
         <h2>Joined SF Dragon Warriors during my 2025 summer internship in the Bay Area.</h2>
       </div>
       <div class="masonry-item">
@@ -87,7 +87,7 @@
         <h2>Paddling at the 2024 OCRA Eastern Sprint Championships.</h2>
       </div>
       <div class="masonry-item">
-        <img src="sports/pickering_2022.JPG" alt="Pickering Dragon Boat Festival">
+        <img src="sports/pickering_2022.JPG" alt="">
         <h2>First time dragon boat racing with Iron Dragons in 2022.</h2>
       </div>
       <div class="masonry-item">
