--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <p>
           I'm a second year Master's student in the
           <a href="https://www.ml.cmu.edu">Machine Learning Department</a> at Carnegie Mellon University, supervised by
-          <a href="https://www.cs.cmu.edu/~nihars/">Nihar Shah</a>. I completed my undergraduate degree in
+          <a href="https://www.cs.cmu.edu/~nihars/">Nihar Shah</a>. Broadly, I am interested in using ML to better assist and augment scientific evaluation and discovery. 
+          I completed my undergraduate degree in
           <a href="https://engsci.utoronto.ca/program/what-is-engsci/">Engineering Science</a> at the University of Toronto, where I was supervised by
           <a href="https://security.csl.toronto.edu">David Lie</a> for my thesis on utility-preserving private NLP inference.
         </p>
