--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div style="max-width:800px;margin:auto;">
+  <div class="main-container">
 
     <!-- Header Section -->
     <div style="display:flex;flex-wrap:wrap;align-items:center;justify-content:space-between;padding:2.5% 0;">
