--- a/water_sports.html
+++ b/water_sports.html
@@ -5,6 +5,51 @@
   <title>Sarina Xi - Paddling & Rowing</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="stylesheet.css">
+  <style>
+    /* Container for the masonry layout */
+    .masonry {
+      column-count: 3;
+      column-gap: 16px;
+      max-width: 900px;
+      margin: 20px auto;
+    }
+
+    /* Each card inside the masonry */
+    .masonry-item {
+      display: inline-block;
+      width: 100%;
+      margin-bottom: 16px;
+      background: #f9f9f9;
+      border-radius: 8px;
+      overflow: hidden;
+      break-inside: avoid;
+    }
+
+    .masonry-item img {
+      width: 100%;
+      display: block;
+      object-fit: cover;
+      border-radius: 8px 8px 0 0;
+    }
+
+    .masonry-item h2 {
+      margin: 8px;
+      font-size: 14px;
+      color: #333;
+    }
+
+    @media (max-width: 900px) {
+      .masonry {
+        column-count: 2;
+      }
+    }
+
+    @media (max-width: 600px) {
+      .masonry {
+        column-count: 1;
+      }
+    }
+  </style>
 </head>
 <body>
   <div style="max-width:900px; margin:auto; padding:20px;">
