--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div style="padding:12px 0;display:flex;gap:20px;align-items:center;">
       <img src="images/green1.JPG" alt="paper image" style="width:20%;min-width:120px;">
       <div style="flex:1;">
-        <a href="https://arxiv.org/abs/2303.16750">
+        <a href="https://arxiv.org/pdf/2303.16750">
           <span class="papertitle">A Gold Standard Dataset For the Reviewer Assignment Problem</span>
         </a>
         <br>
